# scoring-meelo

./: README.md  eda.ipynb  eda_viz.py  feature_engineering.py  modelisation.py  pyproject.toml  scoring.ipynb
data/: data.csv
mlruns/0/: meta.yaml
mlruns/779455752081223829/: meta.yaml
mlruns/779455752081223829/82262ee5dc0f4aa19b1ea111c0d886cc/: meta.yaml
mlruns/779455752081223829/82262ee5dc0f4aa19b1ea111c0d886cc/artifacts/: pr_curve.html
mlruns/779455752081223829/82262ee5dc0f4aa19b1ea111c0d886cc/metrics/: train_ap  train_f1_unpaid  train_fn  train_fp  train_gini  train_precision_unpaid  train_recall_unpaid  train_roc_auc  train_threshold  train_tn  train_tp  val_ap  val_f1_unpaid  val_fn  val_fp  val_gini  val_precision_unpaid  val_recall_unpaid  val_roc_auc  val_threshold  val_tn  val_tp
mlruns/779455752081223829/82262ee5dc0f4aa19b1ea111c0d886cc/params/: encoding  eval_metric
mlruns/779455752081223829/82262ee5dc0f4aa19b1ea111c0d886cc/tags/: mlflow.log-model.history  mlflow.runName  stage
mlruns/779455752081223829/d53f8a3784704ca69e2c82b3f807a258/: meta.yaml
mlruns/779455752081223829/d53f8a3784704ca69e2c82b3f807a258/artifacts/: pr_curve.html
mlruns/779455752081223829/d53f8a3784704ca69e2c82b3f807a258/metrics/: train_ap  train_f1_unpaid  train_fn  train_fp  train_gini  train_precision_unpaid  train_recall_unpaid  train_roc_auc  train_threshold  train_tn  train_tp  val_ap  val_f1_unpaid  val_fn  val_fp  val_gini  (+6 more)
mlruns/779455752081223829/df83fab32c814211bbd8e437c85daacb/: meta.yaml
mlruns/779455752081223829/f6f1da47878048cb9ee37b0d77100225/: meta.yaml
(+75 files in other folders)
