[project]
name = "scoring-meelo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "mlflow>=2.17,<3",
    "nbformat>=5.10.4",
    "optuna>=4.9.0",
    "pandas>=2.2,<3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "shap>=0.52.0",
]
